--- a/cv/index.html
+++ b/cv/index.html
@@ -139,10 +139,21 @@
         setInterval(() => {
             emre.innerHTML = emre.innerHTML === "EMRE" ? 3673 : "EMRE";
         }, 3000);
-        setTimeout(() => {
-            document.querySelector("#pic").setAttribute("src","img.jpg");
+
+        let say1 = setTimeout(() => {
             document.querySelector("#author").innerHTML = "Emre YÜZGÜL ";
+        }, 1000);
+        let say2 = setTimeout(() => {
             document.querySelector("#tel").innerHTML = "Tel: 0541 482 ";
+            emre.innerHTML = "EMRE";
+            email.innerHTML = "eyuzgul@gmail.com";
+            email.setAttribute("href","mailto:eyuzgul@gmail.com");
+        }, 1600);
+        let say3 = setTimeout(() => {
+            document.querySelector("#pic").setAttribute("src","img.jpg");
+        }, 2200);
+
+        let say4 = setTimeout(() => {
             document.querySelector("#referanslar").innerHTML = "<ul> <li>Bülent Dülger - 2 Nolu Küçük Sanayi Sitesi (Biga)</li> <li>Ömer Özel - Damla Bilgisayar Firma sahibi (Biga)</li> <li>Bahattin Çetin - SMMM (Biga)</li> <li>Zeki Kaya - Meganet (Biga)</li> </ul>";
             document.querySelector("#deneyimler").innerHTML = "<h4>Değerli Tic.Ltd.Şti. (Karşıyaka/İzmir) <span>2013-2015</span></h4><ul><li>Bilgi İşlem Uzmanı</li><li>Ticari Program Destek</li><li>Sistem Analizi</li></ul><h4>Elit A.Ş. (Çankaya/İzmir) <span>2011-2013</span></h4><ul><li>Bilgi İşlem Uzmanı</li><li>Veri Analizi</li></ul><h4>Çobanoğlu Bilgisayar (Çankaya/İzmir) <span>2010-2011</span></h4><ul><li>Teknik Servis</li><li>Pazarlama</li></ul><h4>Başarı Yapı Malzemeleri Ltd.Şti. (Uşak) <span>2009-2010</span></h4><ul><li>Pazarlama</li><li>Satın alma</li></ul><h4>Gökkuşağı Ölç.ve.Değ.Mrk (Uşak) <span>2005-2009</span></h4><ul><li>Veri Analizi</li><li>İnsan Kaynakları</li></ul><h4>ClassModule Dergisi (Bursa) <span>2001-2003</span></h4><ul><li>Genel Yayın Yönetmeni</li><li>İçerik Editörlüğü</li></ul><h4>Damla Bilgisayar (Biga/Çanakkale) <span>1999-2001 / 2018-2020</span></h4><ul><li>E-Fatura ve E-Arşiv fatura tasarımları</li><li>Yazılım geliştirme ve Web sitesi yapımı</li><li>Teknik servis</li></ul>";
             document.querySelector("#hobiler").innerHTML = "Ailemle vakit geçirmek, sinema, kitap okumak, programlama dilleri ve teknoloji ile ilgili yenilikleri araştırmak";
@@ -150,10 +161,7 @@
             document.querySelector("#bilgisayar").innerHTML = "<ul><li>Uzman Seviye: Microsoft Excel, Word ve Access</li><li>İleri Seviye Web Programlama (Node JS, JavaScript, PHP, HTML, CSS, SCSS, Http ve RESTful API)</li><li>Desktop programlama (Visual Basic, VBA)</li><li>Veritabanı yönetim sistemleri (SQL, MySQL, SQLite, MongoDB, MS SQL Server)</li><li>Orta Seviye Multimedya (Adobe Photoshop, Premier, Sony Vegas)</li><li>Başlangıç seviyesinde Mobil programlama (Android, Java)</li></ul>";
             document.querySelector("#beceriler").innerHTML = "<ul><li>Mikro Run Online Sertifikası - 2019 Akademikro</li><li>Microsoft Excel Uzman Kullanıcı - 2003 MS Türkiye - T.Tomruk</li><li>Microsoft Excel Moderator - 2001 Tam Çözüm Akademi - M.Korkmaz</li><li>PC Magazin Power User - 2000 C.Tarhan</li><li>W3Schools ve SoloLearn sertifikaları</li><li>Bilgisayar İşletmenliği - 2000 Milli Eğitim</li></ul>";
             document.querySelector("#egitim").innerHTML = "<ul><li>ÇOMÜ İİB Fakültesi Maliye Bölümü</li><li>İzmir Gaziemir Lisesi</li><li>İzmir Pirireis Ortaokulu</li><li>Mersin 24 Kasım İlkokulu</li></ul>";
-            emre.innerHTML = "EMRE";
-            email.innerHTML = "eyuzgul@gmail.com";
-            email.setAttribute("href","mailto:eyuzgul@gmail.com");
-        }, 2000);
+        }, 3000);
 
     </script>
 </body>
